@@ -10,9 +10,9 @@ DIST aegisub-2.1.8.tar.gz 2431099 RMD160 d2630f838a9e8720c65d9f18010e80e17fb8183
 DIST aegisub-2.1.9_pre5440.tar.xz 1697088 RMD160 1e70f9581a9147252ed96843b780d7af3506041b SHA1 c32b4d84e40f22f854310b966ee9aa768bc952dd SHA256 8bbf637de2962691e5f2a2c67710418b887b83f1d085bf8d29ee5a47e688f19a
 DIST aegisub-3.0_pre4897.tar.xz 1743732 RMD160 7ff9c6c8c51673118a6c1a4f8d18506b885ba1f0 SHA1 69854944f57202c2afb3a24edf60ca85f535fe29 SHA256 d4d374e815b907403ad40438f54567e3e05d79e18c175def31107273f1c8e7af
 EBUILD aegisub-2.1.8.ebuild 1738 RMD160 d4010837c8ace29b00bb33eec2875d9047e32f27 SHA1 b12259f80b8d68622f0126455b61003f52fe9079 SHA256 b1f38a053c108b8d37fd52c1ee3b5f05fba6f4b367ae335ab29ae336e73f225a
-EBUILD aegisub-2.1.9999.ebuild 1479 RMD160 6404e7490b049a2880b8324873ab1a0625150dee SHA1 5ac48ba8bdff6c9be5ab648ce096e3db32c8d175 SHA256 884991bf051ee289cfe8a445784713c107c9fdac3a0998fd2907693edb998ccf
+EBUILD aegisub-2.1.9999.ebuild 1391 RMD160 92a7f67e4add51b86c5a97b35587ad47a3d76cd4 SHA1 af93645fbb36700ba8f4a9b9c6e0191d2a4f212b SHA256 e1b8fe9c43d64527a15a747b77589d8697b999443d0586269c20da996190aa1a
 EBUILD aegisub-2.1.9_pre5440.ebuild 1407 RMD160 c652ec49a0974fa1bbcc8a50c66ec3c3bc15047a SHA1 87cbb5417e14b8ca99c867a29b091c2922cb7535 SHA256 e928d963c68c76764b30fe08d92614cc81af41eb3a4d6cf22f9748ff398899c6
 EBUILD aegisub-3.0_pre4897.ebuild 2213 RMD160 32cd396bd60a44ddc73d14b09567f3eda5cb424e SHA1 09efbf59b60ca6edc33f96f9ffa2df43c444a9f8 SHA256 74da88964dbd82f667facc7fda5369d43d15784b69e12b229cf3e58a86b3c54f
 EBUILD aegisub-9999.ebuild 1810 RMD160 5bf3e56aae7bb649e37343ed89241b7bab6a896d SHA1 f178b7aac5f03d0ff2dbfa1fc04742d25b133c67 SHA256 280cf9f832b23c840f509434985765505793a1935406a264d82f02c37417e7b9
-MISC ChangeLog 1415 RMD160 9aa9ca6bbaa64e65c2080b9fc4536aea5d81c2b4 SHA1 13888d467a20b129e2373b98fc9497232a26de24 SHA256 608b297a3fa2564392e2926bde62f898b0ae0acdedd3ec8143ffd58c139b9d29
+MISC ChangeLog 1536 RMD160 be6bb30949e97f07e11259760c3aaf7f5e1887f7 SHA1 e1c54c5e2479daf7ceafa879c7b503424ab22be1 SHA256 6fc817ab96d9760e3cba0bf1b1f2f7d6b4a6afc6b3177967465680efb6354288
 MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
