@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Sep 2011; Nikoli <nikoli@lavabit.com> aegisub-2.1.9999.ebuild:
+  upstream removed internal libass and ffmpegsource
+
   05 Jul 2011; Nikoli <nikoli@lavabit.com> aegisub-2.1.9_pre5440.ebuild,
   aegisub-2.1.9999.ebuild:
   sync libass dep with patch
